public/main.css
@font-face {
  font-family: Minecraft;
  src: url(fonts/MinecraftRegular-Bmg3.otf) format('opentype');
}
* {
  box-sizing: border-box;
  color: inherit;
  font-family: inherit;
  font-size: inherit;
  image-rendering: pixelated;
  margin: 0;
  padding: 0;
  text-align: left;
  text-shadow: inherit;
}
*::before, *::after {
  box-sizing: border-box;
}
:root {
  --light-border: rgb(255, 255, 255, .5);
  --dark-border: rgb(0, 0, 0, .5);
  --none: rgb(0, 0, 0, 0);
  --spacing: 8px;
}
body {
  align-items: stretch;
  background-image: url(images/dirt.png);
  background-size: 64px 64px;
  color: white;
  cursor: default;
  display: flex;
  font-family: Minecraft;
  font-size: 24px;
  min-height: 100vh;
  text-shadow: 2px 2px black;
}
button, input, messages, select {
  display: block;
  margin: var(--spacing);
}
button, input, select {
  padding: var(--spacing);
}
button, input[type=button] {
  background-image: url(images/stone.png);
  background-size: 64px 64px;
  border-bottom: 2px solid var(--dark-border);
  border-left: 2px solid var(--light-border);
  border-right: 2px solid var(--dark-border);
  border-top: 2px solid var(--light-border);
  outline: 2px solid black;
}
button:focus, input:focus, input[type=checkbox]:focus, input[type=radio]:focus, input[type=text]:focus, nav a:focus, select:focus {
  outline: 2px solid white;
}
button:active {
  border-bottom: none;
  border-left: 4px solid var(--dark-border);
  border-right: none;
  border-top: 4px solid var(--dark-border);
}
button:disabled {
  border: 2px solid var(--none);
  color: grey;
  text-shadow: -2px -2px black;
}
combo {
  display: flex;
}
html {
  background-color: grey;
}
input:disabled {
  opacity: .7;
}
input[type=checkbox], input[type=radio] {
  appearance: none;
  height: 28px;
  width: 32px;
  position: relative;
  top: 12px;
}
input[type=checkbox]:checked::before {
  content: 'x';
  position: relative;
  top: -15px;
}
input[type=checkbox]:indeterminate::before {
  content: '-';
  position: relative;
  top: -12px;
}
input[type=number] {
  text-align: right;
  width: 5em;
}
input[type=radio]:checked::before {
  content: 'o';
  position: relative;
  top: -15px;
}
input[type=checkbox], input[type=radio], input[type=number], input[type=text], select {
  background-image: url(images/blackstone.png);
  background-size: 64px 64px;
  border-bottom: 2px solid var(--light-border);
  border-left: 2px solid var(--dark-border);
  border-right: 2px solid var(--light-border);
  border-top: 2px solid var(--dark-border);
  outline: 2px solid black;
}
label {
  display: block;
  margin: calc(var(--spacing) * 2);
}
main {
  background-image: url(images/stone.png);
  background-size: 64px 64px;
  border-bottom: 2px solid var(--dark-border);
  border-left: 2px solid var(--light-border);
  border-right: 2px solid var(--dark-border);
  border-top: 2px solid var(--light-border);
  box-shadow: 0 0 8px black;
  display: flex;
  flex-direction: column;
}
nav {
  display: flex;
  flex-direction: column;
}
nav a, nav div {
  background-size: 64px 64px;
  border-bottom: 2px solid var(--dark-border);
  border-left: 2px solid var(--light-border);
  border-right: 2px solid var(--dark-border);
  border-top: 2px solid var(--light-border);
  display: block;
  padding: calc(var(--spacing) * 2);
}
nav a {
  background-image: url(images/blackstone.png);
  text-decoration: none;
}
nav div {
  background-image: url(images/stone.png);
  position: relative;
}
@media (orientation: landscape) {
  main {
    align-items: flex-start;
  }
  nav {
    width: 252px;
  }
  nav a {
    height: 60px;
    margin: 2px
  }
  nav div {
    border-right: none;
    height: 64px;
    width: 254px;
  }
  main {
    flex-basis: 100%;
  }
}
@media (orientation: portrait) {
  body {
    flex-direction: column;
  }
  main {
    border-top: none;
  }
  nav a, nav div {
    height: 64px;
  }
  nav div {
    border-bottom: none;
    order: 128;
  }
}
message {
  color: darkgreen;
  display: block;
  margin: 0;
  padding: 8px;
  text-shadow: 0 0 2px darkgreen;
}
message:first-child {
  color: green;
  text-shadow: 0 0 2px green;
}
messages {
  background-color: black;
  border-bottom: 2px solid var(--light-border);
  border-left: 2px solid var(--dark-border);
  border-right: 2px solid var(--light-border);
  border-top: 2px solid var(--dark-border);
  outline: 2px solid black;
  width: calc(100% - 2 * var(--spacing));
}
option:checked {
  background-image: url(images/stone.png);
  background-size: 64px 64px;
  text-shadow: none;
}
select {
  appearance: unset;
}
select[size] {
  overflow-y: hidden
}

